feature: profile, address and slots booking

--- a/src/index.css
+++ b/src/index.css
@@ -34,3 +34,11 @@ body {
     background: #ffffff !important; /* Change active dot to white */
     opacity: 1;
 }
+
+.scrollbar-hide {
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none; /* IE 10+ */
+}
+.scrollbar-hide::-webkit-scrollbar {
+    display: none; /* Chrome, Safari */
+}
